username not showing fixed

--- a/web/frontend/src/components/taskform.scss
+++ b/web/frontend/src/components/taskform.scss
@@ -12,6 +12,13 @@
     height: 500px;
     border-radius: 12px;
 
+    .header{
+        text-align: center;
+        font-size: 1.5em;
+        margin: 20px 0;
+        color: rgb(7, 7, 83);
+    }
+
     @include mobile{
        width: 100%!important;
        border: none;
